# pite_project

./: .gitignore  .pre-commit-config.yaml  CONTRIBUTIONS.md  Dockerfile  README.md  micro_input.py  pyproject.toml  training_config.yml
.github/workflows/: pre-commit.yml  pylint.yml
File_reading/: audio_file_reader.py  audio_file_reader_constraints.txt
UI/: sound_app.py
docker/: development.dockerfile
scripts/: checkhealth_manifest.py  eval_checkpoint.py  predict_wav.py  snapshot_checkpoints.py
src/AI-dio/Audio/: audio_file_reader.py  micro_input.py  microphone_input.py
src/AI-dio/UI/: sound_app.py
src/AI-dio/audio/: audio_file_reader.py  microphone_input.py
src/AI_dio/UI/: audio_info.py  controls.py  header.py  model_info.py  sound_app.py  worker_audio.py
src/AI_dio/audio/: audio_file_reader.py  microphone_input.py
src/AI_dio/cli/: app.py
src/AI_dio/data_preprocessing/: audio_utils.py  augmentations.py  build_manifest.py  cache_features_memmap.py  dataset.py  features.py
src/AI_dio/training/: metrics.py  models.py  pipeline.py  train.py
tests/: test_audio_file_reader.py  test_microphone_input.py
